@@ -1,3 +1,10 @@
+2002-01-07  Christian Stimming  <stimming@tuhh.de>
+
+	* src/report/report-system/commodity-utilities.scm: Tweaked the
+	exchange rate calculation so that it will work in even more
+	complicated cases, involving different Euroland and other
+	currencies.
+
 2002-01-06  Christian Stimming  <stimming@tuhh.de>
 
 	* src/report/report-system/html-utilities.scm,
